--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
     </ul>
   </nav>
 
-    
+    <div class="hero">
+      <h1>Dépannage informatique à domicile</h1>
+      <p>26 ans d'expérience dans la maintenance d'ordinateurs Windows et Apple,
+        avec un objectif simple; rendre l'outil informatique accessible.</p>
+    </div>
 </body>
 </html>
 
