modification du formulaire

--- a/index.html
+++ b/index.html
@@ -1,128 +1,151 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/f748fcced4.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Entreprise hbi</title>
-</head>
-<body>
-  <!-- nav bar -->
-  <nav>
-    <div class="logo">
-        <img src="/img/unnamed.png" alt="">
-    </div>
-    <ul class="menu">
-      <li class="item"><a href="#">Accueil</a></li>
-      <li class="item"><a href="#">Dépannage</a></li>
-      <li class="item"><a href="#">Tarifs</a></li>
-      <li class="item"><a href="#">Contact</a></li>
-    </ul>
-  </nav>
-  <!-- end nav bar -->
+  </head>
+  <body>
+    <!-- nav bar -->
+    <nav>
+      <div class="logo">
+        <img src="/img/unnamed.png" alt="" />
+      </div>
+      <ul class="menu">
+        <li class="item"><a href="#">Accueil</a></li>
+        <li class="item"><a href="#">Dépannage</a></li>
+        <li class="item"><a href="#">Tarifs</a></li>
+        <li class="item"><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+    <!-- end nav bar -->
 
-  <!-- accueil -->
+    <!-- accueil -->
     <div class="hero">
       <h1>Dépannage informatique à domicile</h1>
-      <p>26 ans d'expérience dans la maintenance d'ordinateurs Windows et Apple,
-        avec un objectif simple; rendre l'outil informatique accessible.</p>
+      <p>
+        23 ans d'expérience dans la maintenance d'ordinateurs Windows et Apple,
+        avec un objectif simple; rendre l'outil informatique accessible.
+      </p>
     </div>
     <!-- end accueil -->
 
     <!-- dépannage assistance informatique -->
     <div class="section-title">
-        <h1>Assistance informatique</h1>
-      </div>
-      <!-- cards -->
-      <div class="section-center">
+      <h1>Assistance informatique</h1>
+    </div>
+    <!-- cards -->
+    <div class="section-center">
       <article class="service-card">
-          <div class="service-img-container">
-          </div>
-          <div class="service-info">
-            <h4>Amélioration des performances</h4>
-            <p>
-              Votre PC est très/trop lent, bug beaucoup, vous ralenti dans vos
-              taches, nous pouvons lui donner une seconde jeunesse.
-            </p>
-          </div>
-        </article>
-
-        <article class="service-card">
-          <div class="service-img-container">
-          </div>
-          <div class="service-info">
-            <h4>Réparation</h4>
-            <p>
-              Vous avez un problème avec votre ordinateur ? Vous n'arrivez pas à
-              vous connecter ou à l'allumer ? Pas de panique, nous intervenons
-              rapidement sur les ordinateurs fixes ou portables, windows ou mac.
-            </p>
-          </div>
-        </article>
-
-        <article class="service-card">
-          <div class="service-img-container">
-          </div>
-          <div class="service-info">
-            <h4>Mise en route des équipement</h4>
-            <p>
-              Nous assurons l'installation et la configuration de votre matériel
-              et de vos logiciels, comme par exemple la mise en route après
-              l'achat.
-            </p>
-          </div>
-        </article>
+        <div class="service-img-container"></div>
+        <div class="service-info">
+          <h4>Amélioration des performances</h4>
+          <p>
+            Votre PC est très/trop lent, bug beaucoup, vous ralenti dans vos
+            taches, nous pouvons lui donner une seconde jeunesse.
+          </p>
         </div>
+      </article>
+
+      <article class="service-card">
+        <div class="service-img-container"></div>
+        <div class="service-info">
+          <h4>Réparation</h4>
+          <p>
+            Vous avez un problème avec votre ordinateur ? Vous n'arrivez pas à
+            vous connecter ou à l'allumer ? Pas de panique, nous intervenons
+            rapidement sur les ordinateurs fixes ou portables, windows ou mac.
+          </p>
+        </div>
+      </article>
+
+      <article class="service-card">
+        <div class="service-img-container"></div>
+        <div class="service-info">
+          <h4>Mise en route des équipement</h4>
+          <p>
+            Nous assurons l'installation et la configuration de votre matériel
+            et de vos logiciels, comme par exemple la mise en route après
+            l'achat.
+          </p>
+        </div>
+      </article>
+    </div>
 
     <!-- dépannage conseil et formation -->
     <div class="section-title">
-        <h1>Conseil et formation</h1>
-      </div>
+      <h1>Conseil et formation</h1>
+    </div>
 
-      <div class="formations">
-        <div class="gauche">
-          <img src="/img/conseil-et-formation.jpg" class="service-img" alt="" />
-        </div>
-        <div class="descriptions">
-          <h4>Formation</h4>
-          <p>
-            Nous vous proposons un large choix de formations, avec la
-            possibilité de traiter un sujet en particulier. Voici quelques
-            exemples de formations: Création de comptes pour les
-            administrations, Création et configuration d'adresses emails,
-            Initiation au PC Windows quelle que soit la version, Initiation au
-            Mac quelle que soit la version, Découverte d'internet et comment
-            surfer sans risque.
-          </p>
-          <h4>Conseil et aide à l'achat</h4>
-          <p>
-            Nous vous apportons une expertise indépendante, pour vous permettre
-            de faire le meilleur choix possible lors de vos achats d'équipements
-            informatiques et si besoin nous vous accompagnons en magasin. Nous
-            couvrons les domaines suivant : - L'achat de nouveau matériel (
-            imprimantes, ordinateurs, tablettes, Smartphone etc …) - La
-            configuration et la sécurisation des connexions informatiques (ex:
-            réseau Wifi, réseau domestique etc …)
-          </p>
-        </div>
+    <div class="formations">
+      <div class="gauche">
+        <img src="/img/conseil-et-formation.jpg" class="service-img" alt="" />
       </div>
+      <div class="descriptions">
+        <h4>Formation</h4>
+        <p>
+          Nous vous proposons un large choix de formations, avec la possibilité
+          de traiter un sujet en particulier. Voici quelques exemples de
+          formations: Création de comptes pour les administrations, Création et
+          configuration d'adresses emails, Initiation au PC Windows quelle que
+          soit la version, Initiation au Mac quelle que soit la version,
+          Découverte d'internet et comment surfer sans risque.
+        </p>
+        <h4>Conseil et aide à l'achat</h4>
+        <p>
+          Nous vous apportons une expertise indépendante, pour vous permettre de
+          faire le meilleur choix possible lors de vos achats d'équipements
+          informatiques et si besoin nous vous accompagnons en magasin. Nous
+          couvrons les domaines suivant : - L'achat de nouveau matériel (
+          imprimantes, ordinateurs, tablettes, Smartphone etc …) - La
+          configuration et la sécurisation des connexions informatiques (ex:
+          réseau Wifi, réseau domestique etc …)
+        </p>
+      </div>
+    </div>
 
-<!-- footer -->
-    <footer>
-        <h2>Contactez-nous</h2>
-        <form >
-            <input placeholder="Nom">
-            <input placeholder="E-mail">
+    <!-- footer -->
+    <section class="contact">
+      <!-- infos contact -->
+      <div class="infos">
+        <div class="contact-info">
+          <div class="contact-item">
+            <h4 class="contact-title"><i class="fa-solid fa-house"></i></h4>
+            <p>104, Rue Louise Michel - 59290 Wasquehal</p>
+          </div>
+          <div class="contact-item">
+            <h4 class="contact-title"><i class="fa-solid fa-envelope"></i></h4>
+            <p>g.besoin.daide@myhbi.fr</p>
+          </div>
+          <div class="contact-item">
+            <h4 class="contact-title"><i class="fa-solid fa-phone"></i></h4>
+            <p>06.87.79.27.79</p>
+          </div>
+        </div>
+
+        <!-- formulaire -->
+        <div class="contact-form">
+          <h2>Contactez-nous</h2>
+          <form>
+            <input placeholder="Nom" />
+            <input placeholder="E-mail" />
             <textarea placeholder="Votre message ici ..."></textarea>
             <button>Envoyer</button>
-        </form>
-
-        <div id="deuxiemeTrait"></div>
-            <div id="copyright">
-                <span>&copy;All Rights Reserved. www.myhbi.fr - Siret n° : 79759284700017</span>
-                 </div>    
-    </footer>
-
-</body>
+          </form>
+        </div>
+      </div>
+      <div id="deuxiemeTrait"></div>
+      <div id="copyright">
+        <span
+          >&copy;All Rights Reserved. www.myhbi.fr - Siret n° :
+          79759284700017</span
+        >
+      </div>
+    </section>
+  </body>
 </html>
-
