page tarif les formules

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/f748fcced4.js"
       crossorigin="anonymous"
     ></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <title>Entreprise hbi</title>
   </head>
   <body>
@@ -42,7 +43,7 @@
     <!-- cards -->
     <div class="section-center">
       <article class="service-card">
-        <div class="service-img-container"></div>
+        <!-- <div class="service-img-container"></div> -->
         <div class="service-info">
           <h4>Amélioration des performances</h4>
           <p>
@@ -53,7 +54,7 @@
       </article>
 
       <article class="service-card">
-        <div class="service-img-container"></div>
+        <!-- <div class="service-img-container"></div> -->
         <div class="service-info">
           <h4>Réparation</h4>
           <p>
@@ -65,7 +66,7 @@
       </article>
 
       <article class="service-card">
-        <div class="service-img-container"></div>
+        <!-- <div class="service-img-container"></div> -->
         <div class="service-info">
           <h4>Mise en route des équipement</h4>
           <p>
@@ -108,6 +109,105 @@
         </p>
       </div>
     </div>
+
+
+    <!-- page tarifs -->
+    <section class="services">
+      <div class="section-title">
+        <h1>Tarifs</h1>
+      </div>
+      <div class="services-title-formule">
+        <h3>Les formules</h3>
+      </div>
+
+      <div class="section-center">
+        <!-- les cards -->
+        <article class="service-card-tarifs">
+          <div class="service-img-container">
+            <img src="/img/image-reparation.jpg" class="service-img" alt="" />
+          </div>
+          <div class="service-info">
+            <h4>Remplacement de disque dur</h4>
+            <p>
+              pour redonner une seconde jeunesse à un ordinateur (Windows ou Mac
+              os) trop lent. Elle permet dans certains cas d'éviter l'achat d'un
+              nouvel ordinateur. Cela comprend: Le remplacement du disque dur
+              (disque dur SSD de 480 Gb neuf garantie 24 mois),la copie des
+              données, le retour et la configuration chez vous.
+            </p>
+
+            <h3 class="price">240 €</h3>
+          </div>
+        </article>
+
+        <article class="service-card-tarifs">
+          <div class="service-img-container">
+            <img src="/img/new.jpeg" class="service-img" alt="" />
+          </div>
+          <div class="service-info">
+            <h4>Mise en route de nouvelle équipement</h4>
+            <p>
+              Cette formule vous garantie la mise en route en tout simplicité de
+              votre nouvel équipement, Diagnostic gratuit à domicile (~15 mn)
+              pour vérifier la faisabilité, Configuration et mise en route à
+              domicile.
+            </p>
+            <h3 class="price">75 €</h3>
+          </div>
+        </article>
+
+        <article class="service-card-tarifs">
+          <div class="service-img-container">
+            <img src="/img/windows.jpeg" class="service-img" alt="" />
+          </div>
+          <div class="service-info">
+            <h4>Réinstallation de systeme Windows ou Mac os</h4>
+            <p>
+              Dans certains cas, il devient necessaire de ré-installer
+              complement Windows (version 10 au minium), ou réinstaller le
+              systeme d'exploitation pour repartir sur une base seine,
+              Diagnostic gratuit à domicile (~15 mn) pour vérifier la
+              faisabilité. Configuration à domicile.
+            </p>
+            <h3 class="price">75 €</h3>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <!-- les tarifs horaires -->
+    <section class="mo-container">
+      <div class="title">
+        <h2>Les tarifs horaires</h2>
+      </div>
+      <div class="mo">
+        <div class="depannage"><i class="fa-solid fa-screwdriver-wrench"></i></div>
+          <div class="prestations">
+          <h3 class="prest-title">1 heure de dépannage pc windows ou pc Apple</h3>
+          <p class="prest-description">
+            Un diagnostic gratuit permet de se faire une idée de la nature de la
+            panne et de la durée d'intervention pour établir un devis,
+            Diagnostic gratuit à domicile (~15 mn), Validation d'un devis avant
+            toute intervention, Intervention en horaire décalé de 18h30 à 22h00.
+          </p>
+          <h3 class="price">60 €</h3>
+        </div>
+
+        <div class="conseil"><i class="fa-solid fa-chalkboard-user"></i></div>
+        <div class="prestations">
+          <h3 class="prest-title">1 heure de formation ou Conseil</h3>
+          <p class="prest-description">
+            Le sujet de la formation sera définit au moment de la prise de
+            rendez vous, Formation personnalisée en fonction de votre niveau,
+            Sujets adaptés à vos besoins, Formation dispensée à votre domicile.
+            Accompagnement en magasin et Conseils personnalisés en fonction de
+            vos besoins.
+          </p>
+          <h3 class="price">40 €</h3>
+        </div>
+        </div>
+    </section>
+
 
     <!-- footer -->
     <section class="contact">
