--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
       src="https://kit.fontawesome.com/f748fcced4.js"
       crossorigin="anonymous"
     ></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
     <title>Entreprise hbi</title>
   </head>
   <body>
@@ -110,7 +115,6 @@
       </div>
     </div>
 
-
     <!-- page tarifs -->
     <section class="services">
       <div class="section-title">
@@ -180,20 +184,27 @@
       <div class="title">
         <h2>Les tarifs horaires</h2>
       </div>
+
       <div class="mo">
-        <div class="depannage"><i class="fa-solid fa-screwdriver-wrench"></i></div>
+        <div class="dep">
+          <i class="fa-solid fa-screwdriver-wrench"></i>
           <div class="prestations">
-          <h3 class="prest-title">1 heure de dépannage pc windows ou pc Apple</h3>
-          <p class="prest-description">
-            Un diagnostic gratuit permet de se faire une idée de la nature de la
-            panne et de la durée d'intervention pour établir un devis,
-            Diagnostic gratuit à domicile (~15 mn), Validation d'un devis avant
-            toute intervention, Intervention en horaire décalé de 18h30 à 22h00.
-          </p>
-          <h3 class="price">60 €</h3>
+            <h3 class="prest-title">
+              1 heure de dépannage pc windows ou pc Apple
+            </h3>
+            <p class="prest-description">
+              Un diagnostic gratuit permet de se faire une idée de la nature de
+              la panne et de la durée d'intervention pour établir un devis,
+              Diagnostic gratuit à domicile (~15 mn), Validation d'un devis
+              avant toute intervention, Intervention en horaire décalé de 18h30
+              à 22h00.
+            </p>
+          </div>
+          <h3 class="price-depannage">60 €</h3>
         </div>
 
         <div class="conseil"><i class="fa-solid fa-chalkboard-user"></i></div>
+
         <div class="prestations">
           <h3 class="prest-title">1 heure de formation ou Conseil</h3>
           <p class="prest-description">
@@ -205,9 +216,8 @@
           </p>
           <h3 class="price">40 €</h3>
         </div>
-        </div>
+      </div>
     </section>
-
 
     <!-- footer -->
     <section class="contact">
