styles tarifs horaires

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Entreprise hbi</title>
   </head>
   <body>
-    <!-- nav bar -->
+    <!------------------- nav bar ------------------------->
     <nav>
       <div class="logo">
         <img src="/img/unnamed.png" alt="" />
@@ -31,7 +31,7 @@
     </nav>
     <!-- end nav bar -->
 
-    <!-- accueil -->
+    <!--------------------- accueil ----------------------------->
     <div class="hero">
       <h1>Dépannage informatique à domicile</h1>
       <p>
@@ -41,14 +41,13 @@
     </div>
     <!-- end accueil -->
 
-    <!-- dépannage assistance informatique -->
+    <!------------------ dépannage assistance informatique ------------------->
     <div class="section-title">
       <h1>Assistance informatique</h1>
     </div>
-    <!-- cards -->
+    <!-------- cards -------->
     <div class="section-center">
       <article class="service-card">
-        <!-- <div class="service-img-container"></div> -->
         <div class="service-info">
           <h4>Amélioration des performances</h4>
           <p>
@@ -59,7 +58,6 @@
       </article>
 
       <article class="service-card">
-        <!-- <div class="service-img-container"></div> -->
         <div class="service-info">
           <h4>Réparation</h4>
           <p>
@@ -71,7 +69,6 @@
       </article>
 
       <article class="service-card">
-        <!-- <div class="service-img-container"></div> -->
         <div class="service-info">
           <h4>Mise en route des équipement</h4>
           <p>
@@ -83,7 +80,7 @@
       </article>
     </div>
 
-    <!-- dépannage conseil et formation -->
+    <!------------------- dépannage conseil et formation ------------------>
     <div class="section-title">
       <h1>Conseil et formation</h1>
     </div>
@@ -115,7 +112,7 @@
       </div>
     </div>
 
-    <!-- page tarifs -->
+    <!----------------------- page tarifs ---------------------->
     <section class="services">
       <div class="section-title">
         <h1>Tarifs</h1>
@@ -125,7 +122,7 @@
       </div>
 
       <div class="section-center">
-        <!-- les cards -->
+        <!------ les cards ------->
         <article class="service-card-tarifs">
           <div class="service-img-container">
             <img src="/img/image-reparation.jpg" class="service-img" alt="" />
@@ -179,7 +176,7 @@
       </div>
     </section>
 
-    <!-- les tarifs horaires -->
+    <!------------------- les tarifs horaires ------------------->
     <section class="mo-container">
       <div class="title">
         <h2>Les tarifs horaires</h2>
@@ -203,25 +200,26 @@
           <h3 class="price-depannage">60 €</h3>
         </div>
 
-        <div class="conseil"><i class="fa-solid fa-chalkboard-user"></i></div>
-
-        <div class="prestations">
-          <h3 class="prest-title">1 heure de formation ou Conseil</h3>
-          <p class="prest-description">
-            Le sujet de la formation sera définit au moment de la prise de
-            rendez vous, Formation personnalisée en fonction de votre niveau,
-            Sujets adaptés à vos besoins, Formation dispensée à votre domicile.
-            Accompagnement en magasin et Conseils personnalisés en fonction de
-            vos besoins.
-          </p>
-          <h3 class="price">40 €</h3>
+        <div class="dep">
+          <div class="conseil"><i class="fa-solid fa-chalkboard-user"></i></div>
+          <div class="prestations">
+            <h3 class="prest-title">1 heure de formation ou Conseil</h3>
+            <p class="prest-description">
+              Le sujet de la formation sera définit au moment de la prise de
+              rendez vous, Formation personnalisée en fonction de votre niveau,
+              Sujets adaptés à vos besoins, Formation dispensée à votre
+              domicile. Accompagnement en magasin et Conseils personnalisés en
+              fonction de vos besoins.
+            </p>
+          </div>
+          <h3 class="price-depannage">40 €</h3>
         </div>
       </div>
     </section>
 
-    <!-- footer -->
+    <!---------------------- footer ---------------------->
     <section class="contact">
-      <!-- infos contact -->
+      <!----- infos contact ----->
       <div class="infos">
         <div class="contact-info">
           <div class="contact-item">
@@ -238,7 +236,7 @@
           </div>
         </div>
 
-        <!-- formulaire -->
+        <!------------------------- formulaire ------------------------>
         <div class="contact-form">
           <h2>Contactez-nous</h2>
           <form>
