styles mode mobile

--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
         <img src="/img/unnamed.png" alt="" />
       </div>
       <ul class="menu">
-        <li class="item"><a href="#">Accueil</a></li>
-        <li class="item"><a href="#">Dépannage</a></li>
-        <li class="item"><a href="#">Tarifs</a></li>
-        <li class="item"><a href="#">Contact</a></li>
+        <li class="item"><a href="index.html">Accueil</a></li>
+        <li class="item"><a href="depannage.html">Dépannage</a></li>
+        <li class="item"><a href="tarifs.html">Tarifs</a></li>
+        <li class="item"><a href="contact.html">Contact</a></li>
       </ul>
+      <div class="toggle">
+        <span id="burger" class="burger"></span>
+      </div>
     </nav>
     <!-- end nav bar -->
 
@@ -184,7 +187,7 @@
 
       <div class="mo">
         <div class="dep">
-          <i class="fa-solid fa-screwdriver-wrench"></i>
+          <div class="icons"><i class="fa-solid fa-screwdriver-wrench"></i></div>
           <div class="prestations">
             <h3 class="prest-title">
               1 heure de dépannage pc windows ou pc Apple
@@ -201,7 +204,7 @@
         </div>
 
         <div class="dep">
-          <div class="conseil"><i class="fa-solid fa-chalkboard-user"></i></div>
+          <div class="icons"><i class="fa-solid fa-chalkboard-user"></i></div>
           <div class="prestations">
             <h3 class="prest-title">1 heure de formation ou Conseil</h3>
             <p class="prest-description">
@@ -255,5 +258,6 @@
         >
       </div>
     </section>
+    <script src="/toggle.js"></script>
   </body>
 </html>
